<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    android:background="@color/white"
    android:fillViewport="true"
    >

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:orientation="vertical">

        <Button
            android:id="@+id/select_category_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/material_btn_selector"
            android:drawableEnd="@drawable/ic_expand_more"
            android:gravity="start|center_vertical"
            android:paddingEnd="5dp"
            android:paddingStart="5dp"
            android:text="@string/select_category"
            android:textAllCaps="false"
            android:textColor="@color/grayicon"
            android:textSize="19sp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="9dp"
            android:background="@color/lightGray" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="10">

            <android.support.design.widget.TextInputLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="16dp"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="16dp"
                android:layout_weight="9"
                android:paddingEnd="5dp"
                android:paddingStart="5dp">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/new_ad_city_text_input"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@null"
                    android:gravity="start"
                    android:hint="@string/city" />
            </android.support.design.widget.TextInputLayout>

            <!--  scale animation on click instead of background DONT FORGET TO CHANGE-->
            <ImageButton
                android:id="@+id/location_new_ad_btn"
                android:layout_width="0dp"
                android:layout_height="30dp"
                android:layout_marginEnd="10dp"
                android:layout_marginTop="24dp"
                android:layout_weight="1"
                android:background="@drawable/material_btn_selector"
                android:scaleType="fitCenter"
                android:src="@drawable/placelocalizer"
                android:tint="@color/colorPrimary"

                />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="9dp"
            android:background="@color/lightGray" />

        <LinearLayout
            android:id="@+id/cb_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:orientation="horizontal"
            android:weightSum="10">

            <CheckBox
                android:id="@+id/request_matches_cb"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="1" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:layout_weight="9"
                android:text="@string/request_matches"
                android:textColor="@color/textColorGray"
                android:textSize="14sp"
                android:layout_gravity="center_vertical"/>
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="9dp"
            android:background="@color/lightGray" />

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="16dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:paddingEnd="5dp"
            android:paddingStart="5dp">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/new_ad_free_text_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@null"
                android:gravity="start"
                android:hint="@string/free_txt" />
        </android.support.design.widget.TextInputLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="9dp"
            android:background="@color/lightGray" />


        <Button
            android:id="@+id/find_ads_btn"
            android:layout_width="220dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="40dp"
            android:background="@drawable/btns_shapes_selector"
            android:text="@string/find"
            android:textAllCaps="false"
            android:textColor="@color/white" />
    </LinearLayout>


</android.support.v4.widget.NestedScrollView>