<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/white"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@color/white">

        <Button
            android:id="@+id/select_category_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginTop="10dp"
            android:paddingStart="5dp"
            android:paddingEnd="5dp"
            android:background="@drawable/material_btn_selector"
            android:drawableEnd="@drawable/ic_expand_more"
            android:text="@string/select_category"
            android:textAllCaps="false"
            android:gravity="start|center_vertical"
            android:textColor="@color/grayicon"
            android:textSize="19sp"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="9dp"
            android:background="@color/lightGray" />

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="16dp"
            android:layout_gravity="center"
            android:paddingStart="5dp"
            android:paddingEnd="5dp">
            <android.support.design.widget.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/ad_name"
                android:gravity="start"
                android:id="@+id/new_ad_name_text_input"
                android:background="@null"/>
        </android.support.design.widget.TextInputLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="9dp"
            android:background="@color/lightGray" />

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="16dp"
            android:layout_gravity="center"
            android:paddingStart="5dp"
            android:paddingEnd="5dp">
            <android.support.design.widget.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/description"
                android:gravity="start"
                android:id="@+id/new_ad_description_text_input"
                android:background="@null"/>
        </android.support.design.widget.TextInputLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="9dp"
            android:background="@color/lightGray" />

        <!-- on click select categories and set this text -->
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="16dp"
            android:layout_gravity="center"
            android:paddingStart="5dp"
            android:paddingEnd="5dp">
            <android.support.design.widget.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/interested_in"
                android:inputType="none"
                android:focusable="false"
                android:cursorVisible="false"
                android:gravity="start"
                android:id="@+id/new_ad_to_next_categories_text_input"
                android:background="@null"
                />
        </android.support.design.widget.TextInputLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="9dp"
            android:background="@color/lightGray" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="10dp">
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:orientation="horizontal"
                android:id="@+id/lay1">
                <com.github.siyamed.shapeimageview.mask.PorterShapeImageView
                    android:layout_width="120dp"
                    android:layout_height="120dp"
                    android:id="@+id/new_ad_img1"
                    android:src="@drawable/addphoto"
                    android:scaleType="centerInside"
                    android:background="@drawable/add_photo_background"
                    android:layout_marginEnd="5dp"

                    app:siShape="@drawable/shape_rounded_rectangle"
                    app:siSquare="true"
                    />
                <com.github.siyamed.shapeimageview.mask.PorterShapeImageView
                    android:layout_width="120dp"
                    android:layout_height="120dp"
                    android:id="@+id/new_ad_img2"
                    android:src="@drawable/addphoto"
                    android:scaleType="centerInside"
                    android:background="@drawable/add_photo_background"
                    android:layout_marginStart="5dp"

                    app:siShape="@drawable/shape_rounded_rectangle"
                    app:siSquare="true"
                    />
            </LinearLayout>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:orientation="horizontal"
                android:layout_below="@+id/lay1"
                android:layout_marginTop="10dp">
                <com.github.siyamed.shapeimageview.mask.PorterShapeImageView
                    android:layout_width="120dp"
                    android:layout_height="120dp"
                    android:id="@+id/new_ad_img3"
                    android:src="@drawable/addphoto"
                    android:scaleType="centerInside"
                    android:background="@drawable/add_photo_background"
                    android:layout_marginEnd="5dp"

                    app:siShape="@drawable/shape_rounded_rectangle"
                    app:siSquare="true"/>
                <com.github.siyamed.shapeimageview.mask.PorterShapeImageView
                    android:layout_width="120dp"
                    android:layout_height="120dp"
                    android:id="@+id/new_ad_img4"
                    android:src="@drawable/addphoto"
                    android:scaleType="centerInside"
                    android:background="@drawable/add_photo_background"
                    android:layout_marginStart="5dp"

                    app:siShape="@drawable/shape_rounded_rectangle"
                    app:siSquare="true"
                    />
            </LinearLayout>
        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="9dp"
            android:background="@color/lightGray" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="10"
            android:orientation="horizontal">
            <android.support.design.widget.TextInputLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="16dp"
                android:layout_gravity="center"
                android:layout_weight="8"
                android:paddingStart="5dp"
                android:paddingEnd="5dp">
                <android.support.design.widget.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/city"
                    android:gravity="start"
                    android:id="@+id/new_ad_city_text_input"
                    android:background="@null"/>
            </android.support.design.widget.TextInputLayout>

            <!--  scale animation on click instead of background DONT FORGET TO CHANGE-->
            <ImageButton
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:layout_weight="2"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="8dp"
                android:id="@+id/location_new_ad_btn"
                android:src="@drawable/users_place"
                android:scaleType="centerInside"
                android:background="@drawable/material_btn_selector"
                />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="9dp"
            android:background="@color/lightGray" />

        <Button
            android:layout_width="220dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="40dp"
            android:layout_gravity="center_horizontal"
            android:text="@string/publish"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:background="@drawable/btns_shapes_selector"
            android:id="@+id/publish_ad_btn"
            />

    </LinearLayout>
</android.support.v4.widget.NestedScrollView>