<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/scrollview_user"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/white">

            <ImageView
                android:id="@+id/user_cover_iv"
                android:layout_width="match_parent"
                android:layout_height="160dp"
                android:background="@color/colorPrimary" />

            <ImageView
                android:id="@+id/curr_user_photo_iv"
                android:layout_width="130dp"
                android:layout_height="130dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="90dp"
                android:background="@drawable/circle_iv_shape"
                android:padding="5dp"
                android:scaleType="center"
                android:src="@drawable/userbig" />

            <TextView
                android:id="@+id/user_name_tv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="230dp"
                android:gravity="center"
                android:text="Name name"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginEnd="5dp"
                android:layout_marginStart="5dp"
                android:layout_marginTop="280dp"
                android:background="@color/lightGray" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="300dp"
                android:orientation="vertical"
                android:weightSum="4">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="horizontal"
                    android:weightSum="10">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="9"
                        android:drawablePadding="10dp"
                        android:drawableStart="@drawable/info"
                        android:text="@string/user_info"
                        android:textColor="@color/textColorDarkGray"
                        android:textSize="18sp" />

                    <ImageButton
                        android:id="@+id/edit_user_info_ib"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:background="@android:color/transparent"
                        android:src="@drawable/pencil" />
                </LinearLayout>

                <TextView
                    android:id="@+id/lives_in_tv"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_weight="1"
                    android:drawablePadding="10dp"
                    android:drawableStart="@drawable/building"
                    android:drawableTint="@color/grayicon"
                    android:text="@string/lives_in"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/user_interested_in_tv"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:layout_weight="1"
                    android:drawablePadding="10dp"
                    android:drawableStart="@drawable/clipclip"
                    android:drawableTint="@color/grayicon"
                    android:text="@string/user_interested_in"
                    android:textSize="14sp" />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginEnd="5dp"
                android:layout_marginStart="5dp"
                android:layout_marginTop="410dp"
                android:background="@color/lightGray" />

            <android.support.v7.widget.RecyclerView
                android:id="@+id/recycler_in_user_fragment"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="425dp"
                android:nestedScrollingEnabled="false"
                app:layout_behavior="@string/appbar_scrolling_view_behavior"

                />
        </FrameLayout>

    </android.support.v4.widget.NestedScrollView>

    <!-- This will be shown only on another user pages(not for current user page)-->
    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
        android:visibility="gone"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light">

        <TextView
            android:id="@+id/toolbar_tv"
            android:layout_width="wrap_content"
            android:layout_height="25dp"
            android:gravity="center_vertical|start"
            android:text="ItemName"
            android:textColor="@color/white" />

    </android.support.v7.widget.Toolbar>
</FrameLayout>